--- a/docs/visual-basic/misc/bc30370.md
+++ b/docs/visual-basic/misc/bc30370.md
@@ -1,5 +1,5 @@
 ---
-title: '&#39;(를)&#39; 필요 합니다.'
+title: "'}'가 필요합니다."
 ms.date: 07/20/2015
 f1_keywords:
 - vbc30370
@@ -7,36 +7,36 @@ f1_keywords:
 helpviewer_keywords:
 - BC30370
 ms.assetid: a4ce9be9-fc5d-46ec-a217-c3428bd0b97e
-ms.openlocfilehash: 09e4b75560479a842c121b3776215ed3a853c0f8
-ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
+ms.openlocfilehash: f478c5ee1f88fc853b554a617af59b3ee0c2dd50
+ms.sourcegitcommit: 0888d7b24f475c346a3f444de8d83ec1ca7cd234
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 05/04/2018
-ms.locfileid: "33611220"
+ms.lasthandoff: 12/22/2018
+ms.locfileid: "53766873"
 ---
-# <a name="3939-expected"></a><span data-ttu-id="a57c2-102">&#39;(를)&#39; 필요 합니다.</span><span class="sxs-lookup"><span data-stu-id="a57c2-102">&#39;}&#39; expected</span></span>
-<span data-ttu-id="a57c2-103">배열 이니셜라이저 또는 제약 조건 목록이 올바른 방식으로 끝나지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="a57c2-103">An array initializer or a constraint list has not been ended in a valid fashion.</span></span>  
+# <a name="-expected"></a><span data-ttu-id="a3504-102">'}'가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="a3504-102">'}' expected</span></span>
+<span data-ttu-id="a3504-103">배열 이니셜라이저 또는 제약 조건 목록이 올바른 방식으로 끝나지 않았습니다.</span><span class="sxs-lookup"><span data-stu-id="a3504-103">An array initializer or a constraint list has not been ended in a valid fashion.</span></span>  
   
- <span data-ttu-id="a57c2-104">배열을 초기화할 요소 값을 중괄호(`{}`)로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a57c2-104">The element values with which to initialize an array must be enclosed in braces (`{}`).</span></span>  
+ <span data-ttu-id="a3504-104">배열을 초기화할 요소 값을 중괄호(`{}`)로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a3504-104">The element values with which to initialize an array must be enclosed in braces (`{}`).</span></span>  
   
 ```  
 Dim demoArray() As Integer = New Integer() {1, 2, 3}   
 ```  
   
- <span data-ttu-id="a57c2-105">마찬가지로, 제네릭 형식 매개 변수에 대한 제약 조건 목록의 제약 조건도 중괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a57c2-105">Similarly, the constraints in a constraint list for a generic type parameter must be enclosed in braces.</span></span>  
+ <span data-ttu-id="a3504-105">마찬가지로, 제네릭 형식 매개 변수에 대한 제약 조건 목록의 제약 조건도 중괄호로 묶어야 합니다.</span><span class="sxs-lookup"><span data-stu-id="a3504-105">Similarly, the constraints in a constraint list for a generic type parameter must be enclosed in braces.</span></span>  
   
 ```  
 Public Class dictionaryMaker(Of t As {IComparable, IDisposable, New})   
 ```  
   
- <span data-ttu-id="a57c2-106">**오류 ID:** BC30370</span><span class="sxs-lookup"><span data-stu-id="a57c2-106">**Error ID:** BC30370</span></span>  
+ <span data-ttu-id="a3504-106">**오류 ID:** BC30370</span><span class="sxs-lookup"><span data-stu-id="a3504-106">**Error ID:** BC30370</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a57c2-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a57c2-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a3504-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="a3504-107">To correct this error</span></span>  
   
--   <span data-ttu-id="a57c2-108">"}"를 사용하여 배열 이니셜라이저 또는 제약 조건 목록을 끝냅니다.</span><span class="sxs-lookup"><span data-stu-id="a57c2-108">Use "}" to end the array initializer or constraint list.</span></span>  
+-   <span data-ttu-id="a3504-108">"}"를 사용하여 배열 이니셜라이저 또는 제약 조건 목록을 끝냅니다.</span><span class="sxs-lookup"><span data-stu-id="a3504-108">Use "}" to end the array initializer or constraint list.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a57c2-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a57c2-109">See Also</span></span>  
- [<span data-ttu-id="a57c2-110">배열</span><span class="sxs-lookup"><span data-stu-id="a57c2-110">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)  
- [<span data-ttu-id="a57c2-111">방법: Visual Basic에서 배열 변수 초기화</span><span class="sxs-lookup"><span data-stu-id="a57c2-111">How to: Initialize an Array Variable in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)  
- [<span data-ttu-id="a57c2-112">형식 목록</span><span class="sxs-lookup"><span data-stu-id="a57c2-112">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
- [<span data-ttu-id="a57c2-113">Visual Basic의 제네릭 형식</span><span class="sxs-lookup"><span data-stu-id="a57c2-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
+## <a name="see-also"></a><span data-ttu-id="a3504-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="a3504-109">See Also</span></span>  
+ [<span data-ttu-id="a3504-110">배열 (C++)</span><span class="sxs-lookup"><span data-stu-id="a3504-110">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)  
+ [<span data-ttu-id="a3504-111">방법: Visual Basic에서 배열 변수 초기화</span><span class="sxs-lookup"><span data-stu-id="a3504-111">How to: Initialize an Array Variable in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/arrays/how-to-initialize-an-array-variable.md)  
+ [<span data-ttu-id="a3504-112">형식 목록</span><span class="sxs-lookup"><span data-stu-id="a3504-112">Type List</span></span>](../../visual-basic/language-reference/statements/type-list.md)  
+ [<span data-ttu-id="a3504-113">Generic Types in Visual Basic</span><span class="sxs-lookup"><span data-stu-id="a3504-113">Generic Types in Visual Basic</span></span>](../../visual-basic/programming-guide/language-features/data-types/generic-types.md)
