--- a/docs/core/migration/20-21.md
+++ b/docs/core/migration/20-21.md
@@ -1,15 +1,14 @@
 ---
 title: .NET Core 2.0에서 2.1로 마이그레이션
 description: .NET Core 2.0 앱을 2.1로 업그레이드하는 방법을 알아봅니다.
-author: mairaw
-ms.author: mairaw
 ms.date: 08/06/2018
-ms.openlocfilehash: ace0ca403163ebb304e002107d992d7d6f1124bf
-ms.sourcegitcommit: 5bbfe34a9a14e4ccb22367e57b57585c208cf757
+ms.custom: seodec18
+ms.openlocfilehash: 49afbf8f873ec8b5be8ec2aff0bdc074f5b0b86f
+ms.sourcegitcommit: e6ad58812807937b03f5c581a219dcd7d1726b1d
 ms.translationtype: HT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 09/18/2018
-ms.locfileid: "45989591"
+ms.lasthandoff: 12/10/2018
+ms.locfileid: "53169308"
 ---
 # <a name="migrate-from-net-core-20-to-21"></a>.NET Core 2.0에서 2.1로 마이그레이션
 
